client/posts/embed: Fix wrapping an positioning

--- a/less/posts.mix.less
+++ b/less/posts.mix.less
@@ -67,8 +67,12 @@ del {
 	margin: -2px;
 	padding: 2px;
 	color: black;
+	&.expanded {
+		max-width: 480px;
+	}
 	& > iframe {
 		display: block;
+		margin: auto;
 	}
 }
 
